--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "tabnews-clone",
   "version": "1.0.0",
-  "description": "Um clone do TabNews para fins e estudo",
+  "description": "Um clone do TabNews para fins e estudo.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev" 
   },
   "author": "Bruno N. Melo",
   "license": "MIT",
